feat (api): get all clients and delete client endpoint
